Separate Each Contents

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <h1>Shift Calendar Tools</h1>
             <nav>
                 <ul>
-                    <li><a href="#rshift">RShift</a></li>
-                    <li><a href="#mcshift">McShift</a></li>
-                    <li><a href="#privacy">プライバシーポリシー</a></li>
-                    <li><a href="#terms">利用規約</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                    <li><a href="terms.html">Terms of Service</a></li>
                 </ul>
             </nav>
         </div>
@@ -62,75 +61,15 @@
                 <img src="images/Mcdonald's_Screenshot.png" style="object-fit: contain;" alt="Mcdonald's Shift Helper Screenshot">
             </div>
         </section>
-
-        <section id="privacy" class="privacy-policy">
-            <h3>プライバシーポリシー (Privacy Policy)</h3>
-            <div class="policy-content">
-                <p><strong>最終更新日: 2025年11月19日</strong></p>
-                
-                <h4>1. 収集する情報</h4>
-                <p>当拡張機能（RShift Extension および Mcdonald's Shift Helper）は、ユーザーの利便性向上のため、以下の情報にアクセスします。</p>
-                <ul>
-                    <li><strong>ウェブサイト上のシフト情報:</strong> ユーザーがアクセスした特定のシフト管理サイト上の日付、時間データを読み取ります。</li>
-                    <li><strong>Googleカレンダー情報:</strong> シフトを追加するため、および重複を防ぐために、ユーザーのGoogleカレンダーへの書き込み・読み取り権限を使用します。</li>
-                </ul>
-
-                <h4>2. 情報の利用目的</h4>
-                <p>収集した情報は、以下の目的でのみ使用されます。</p>
-                <ul>
-                    <li>ユーザーのGoogleカレンダーへシフト予定を作成するため。</li>
-                    <li>既に登録済みのシフトとの重複を確認するため。</li>
-                </ul>
-                <p>当拡張機能が、ユーザーのデータを開発者のサーバーへ送信したり、第三者へ販売・共有したりすることは一切ありません。処理はすべてユーザーのブラウザ内で完結します。</p>
-
-                <h4>3. Google API Services User Data Policy への準拠</h4>
-                <p>当アプリによるGoogle APIから受け取った情報の使用および他のアプリへの転送は、<a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>（Limited Use要件を含む）に準拠します。</p>
-
-                <h4>4. お問い合わせ</h4>
-                <p>本ポリシーに関するご質問は、以下のメールアドレスまでご連絡ください。<br>
-                Email: <a href="mailto:mizuki.business.311@gmail.com">mizuki.business.311@gmail.com</a></p> </div>
-        </section>
-
-        <section id="terms" class="terms-of-service"> <h3>利用規約 (Terms of Service)</h3>
-            <div class="terms-content">
-                <p>この利用規約（以下，「本規約」といいます。）は，Shift Calendar Tools（以下，「開発者」といいます。）が提供するChrome拡張機能「RShift Extension」および「McShift Helper」（以下，「本サービス」といいます。）の利用条件を定めるものです。利用者の皆様には，本規約に従って，本サービスをご利用いただきます。</p>
-
-                <h4>第1条（適用）</h4>
-                <p>本規約は，利用者と開発者との間の本サービスの利用に関わる一切の関係に適用されるものとします。</p>
-
-                <h4>第2条（禁止事項）</h4>
-                <p>利用者は，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
-                <ul>
-                    <li>法令または公序良俗に違反する行為</li>
-                    <li>本サービスの運営を妨害するおそれのある行為</li>
-                    <li>本サービスのプログラムをリバースエンジニアリング、逆コンパイル、または逆アセンブルする行為</li>
-                    <li>他の利用者または第三者に不利益を与える行為</li>
-                </ul>
-
-                <h4>第3条（免責事項）★重要</h4>
-                <p>1. 開発者は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。</p>
-                <p>2. 本サービスは、対象となるシフト管理サイト（以下「外部サイト」）のHTML構造を解析して動作しています。<strong>外部サイトの仕様変更等により、予告なく本サービスが正常に動作しなくなる場合がありますが、開発者は修正の義務を負いません。</strong></p>
-                <p>3. 本サービスを利用してGoogleカレンダーに登録された情報の正確性について、開発者は一切の責任を負いません。<strong>利用者は必ず、登録されたスケジュールが正しいかを自身で確認する義務を負います。本サービスの不具合によりシフトの日時を誤認し、遅刻や欠勤等の損害が生じた場合でも、開発者は一切の責任を負いません。</strong></p>
-                <p>4. 開発者は，本サービスに関して，利用者と他の利用者または第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。</p>
-
-                <h4>第4条（サービス内容の変更等）</h4>
-                <p>開発者は，利用者に通知することなく，本サービスの内容を変更し，または本サービスの提供を中止することができるものとし，これによって利用者に生じた損害について一切の責任を負いません。</p>
-
-                <h4>第5条（プライバシーポリシー）</h4>
-                <p>本サービスの利用による利用者の個人情報の取扱いについては，別途定める<a href="privacy.html">プライバシーポリシー</a>に従うものとします。</p>
-
-                <h4>第6条（準拠法・裁判管轄）</h4>
-                <p>本規約の解釈にあたっては，日本法を準拠法とします。本サービスに関して紛争が生じた場合には，開発者の居住地を管轄する裁判所を専属的合意管轄とします。</p>
-
-                <p style="margin-top: 30px; font-size: 0.9rem; color: #666;">
-                    2025年11月19日 制定
-                </p>
-            </div>
-        </section>
     </main>
 
     <footer>
         <div class="container">
+            <nav class="footer-nav">
+                <a href="index.html">Home</a> | 
+                <a href="privacy.html">Privacy Policy</a> | 
+                <a href="terms.html">Terms of Service</a>
+            </nav>
             <p>&copy; 2025 Shift Scheduler Tools. All rights reserved.</p>
         </div>
     </footer>
