Change App Name

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="container">
         <section id="rshift" class="product-card">
             <div class="content">
-                <h3>RShift Extension</h3>
+                <h3>RShift to Google Calendar</h3>
                 <p>大学のシフト管理サイト「RShift」専用の拡張機能です。確定したシフトをワンクリックでGoogleカレンダーに同期します。</p>
                 <ul>
                     <li>✅ 日付と時間を自動取得</li>
@@ -48,7 +48,7 @@
 
         <section id="mcshift" class="product-card">
             <div class="content">
-                <h3>Mcdonald's Shift Helper</h3>
+                <h3>Mcdonald's Crew Room to Google Calendar</h3>
                 <p>マクドナルドクルー向けスケジュールサイト専用ツール。確定シフトの登録だけでなく、シフト提出時の入力補助も行います。</p>
                 <ul>
                     <li>✅ 入力中のシフトをリアルタイム検知</li>
