--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
                 <p><strong>最終更新日: 2025年11月19日</strong></p>
 
                 <h3>1. 収集する情報</h3>
-                <p>当拡張機能（RShift Extension および McShift Helper）は、ユーザーの利便性向上のため、以下の情報にアクセスします。</p>
+                <p>当拡張機能（RShift to Google Calendar および McDonald's Crew Room to Google Calendar）は、ユーザーの利便性向上のため、以下の情報にアクセスします。</p>
                 <ul>
                     <li><strong>ウェブサイト上のシフト情報:</strong> ユーザーがアクセスした特定のシフト管理サイト上の日付、時間データを読み取ります。</li>
                     <li><strong>Googleカレンダー情報:</strong> シフトを追加するため、および重複を防ぐために、ユーザーのGoogleカレンダーへの書き込み・読み取り権限を使用します。</li>
