--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
 
     <main class="container">
         <section id="page-content"> <h3>利用規約 (Terms of Service)</h3>
-            <p>この利用規約（以下，「本規約」といいます。）は，Shift Calendar Tools（以下，「開発者」といいます。）が提供するChrome拡張機能「RShift Extension」および「McShift Helper」（以下，「本サービス」といいます。）の利用条件を定めるものです。利用者の皆様には，本規約に従って，本サービスをご利用いただきます。</p>
+            <p>この利用規約（以下，「本規約」といいます。）は，Shift Calendar Tools（以下，「開発者」といいます。）が提供するChrome拡張機能「RShift to Google Calendar」および「McDonald's Crew Room to Google Calendar」（以下，「本サービス」といいます。）の利用条件を定めるものです。利用者の皆様には，本規約に従って，本サービスをご利用いただきます。</p>
             <h4>第1条（適用）</h4>
             <p>本規約は，利用者と開発者との間の本サービスの利用に関わる一切の関係に適用されるものとします。</p>
 
