--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <h1>Shift Calendar Tools</h1>
+            <h1><a href="index.html" id="toIndex">Shift Calendar Tools</a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -26,9 +26,9 @@
         <section class="page-content">
             <h2>プライバシーポリシー (Privacy Policy)</h2>
             <div class="policy-text">
-                <p><strong>最終更新日: 2025年11月19日</strong></p>
+                <p><strong>最終更新日: 2025年11月24日</strong></p>
 
-                <h3>1. 収集する情報</h3>
+                <h3>1. 収集する情報 (Information Collected)</h3>
                 <p>当拡張機能（RShift to Google Calendar および McDonald's Crew Room to Google Calendar）は、ユーザーの利便性向上のため、以下の情報にアクセスします。</p>
                 <ul>
                     <li><strong>ウェブサイト上のシフト情報:</strong> ユーザーがアクセスした特定のシフト管理サイト上の日付、時間データを読み取ります。</li>
@@ -36,21 +36,37 @@
                     <li><strong>ユーザー情報:</strong> ポップアップ画面にログイン中のアカウント名を表示するために、プロフィール情報（名前）を取得します。</li>
                 </ul>
 
-                <h3>2. 情報の利用目的</h3>
+                <h3>2. 情報の利用目的 (Purpose of Information Use)</h3>
                 <p>収集した情報は、以下の目的でのみ使用されます。</p>
                 <ul>
                     <li>ユーザーのGoogleカレンダーへシフト予定を作成するため。</li>
                     <li>既に登録済みのシフトとの重複を確認するため。</li>
                     <li>操作中のGoogleアカウントをユーザーに明示するため。</li>
                 </ul>
-                <p>当拡張機能が、ユーザーのデータを開発者のサーバーへ送信したり、第三者へ販売・共有したりすることは一切ありません。処理はすべてユーザーのブラウザ内で完結します。</p>
 
-                <h3>3. Google API Services User Data Policy への準拠</h3>
+                <h3>3. データの保護メカニズム (Data Protection Mechanisms)</h3>
+                <p>当拡張機能は、機密データ（Googleカレンダーのデータや認証トークン）を保護するために以下の措置を講じています。</p>
+                <ul>
+                    <li><strong>HTTPS通信:</strong> Google APIとのすべての通信は、SSL/HTTPSを使用して暗号化されています。</li>
+                    <li><strong>ローカルストレージ:</strong> 取得したデータやアクセストークンは、ユーザーのブラウザ（Chrome）内の安全なローカルストレージ（chrome.storage および chrome.identity）にのみ保存されます。</li>
+                    <li><strong>外部送信の禁止:</strong> 開発者は独自のサーバーを保有しておらず、ユーザーのデータが開発者や第三者のサーバーへ送信されることは一切ありません。データ処理はすべてユーザーのデバイス内で完結します。</li>
+                </ul>
+
+                <h3>4. データの保存と削除 (Data Retention and Deletion)</h3>
+                <p>当拡張機能におけるデータの保存期間と削除方法は以下の通りです。</p>
+                <ul>
+                    <li><strong>保存期間:</strong> 当拡張機能は、ユーザーが拡張機能をインストールしている間のみ、認証トークンや設定情報をブラウザ内に保持します。開発者がユーザーのデータを長期間保持することはありません（サーバーを持たないため）。</li>
+                    <li><strong>データの削除:</strong> ユーザーは、ブラウザから当拡張機能をアンインストール（削除）することで、保存されたすべてのローカルデータを即座に削除できます。</li>
+                    <li><strong>カレンダーデータ:</strong> 当拡張機能によって作成されたカレンダーイベントは、Googleカレンダー上でユーザー自身がいつでも削除できます。</li>
+                </ul>
+
+                <h3>5. Google API Services User Data Policy への準拠</h3>
                 <p>当アプリによるGoogle APIから受け取った情報の使用および他のアプリへの転送は、<a href="https://developers.google.com/terms/api-services-user-data-policy" target="_blank">Google API Services User Data Policy</a>（Limited Use要件を含む）に準拠します。</p>
 
-                <h3>4. お問い合わせ</h3>
+                <h3>6. お問い合わせ</h3>
                 <p>本ポリシーに関するご質問は、以下のメールアドレスまでご連絡ください。<br>
-                Email: <a href="mailto:mizuki.business.311@gmail.com">mizuki.business.311@gmail.com</a></p> </div>
+                Email: <a href="mailto:mizuki.business.311@gmail.com">mizuki.business.311@gmail.com</a></p>
+            </div>
         </section>
     </main>
 
