--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <h1>Shift Calendar Tools</h1>
+            <h1><a href="index.html" id="toIndex">Shift Calendar Tools</a></h1>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
